--- a/client/partials/display.html
+++ b/client/partials/display.html
@@ -1,29 +1,29 @@
-<div id="sixteen-oz">
+<div id="sixteen-oz" ng-controller="calculatorController">
   <div class='hr'></div>
   <h1>16 <span id="unbold">OUNCE</span></h1>
   <form class="form-horizontal">
     <div class="form-group">
-      <label for="inputCases" class="col-sm-6 control-label">Amount of Cases</label>
-      <div class="col-sm-offset-1 col-sm-5">
-        <input type="number" min="0.01" step="0.01" max="2500" class="form-control" id="inputCases" ng-model="casesSixteen">
+      <label for="inputCases" class="col-xs-6 control-label">Amount of Cases</label>
+      <div class="col-xs-6">
+        <input type="number" min="0.01" step="0.01" max="2500" class="form-control" ng-model="casesSixteen"/>
       </div>
     </div>
     <div class="form-group">
       <label for="inputCost" class="col-sm-6 control-label">Cost Per Case</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <input type="number" min="0.01" step="0.01" max="2500" class="form-control" id="inputCost" placeholder="29.40" ng-model="priceSixteen">
+        <input type="number" min="0.01" step="0.01" max="2500" class="form-control" placeholder="29.40" ng-model="priceSixteen"/>
       </div>
     </div>
     <div class="form-group">
       <label for="canCost" class="col-sm-6 control-label">Cost Per Can</label>
-    <div class="col-sm-offset-1 col-sm-5">
-        <div class="form-control answer-to-input">{{ priceSixteen/(24*casesSixteen) }}</div>
+      <div class="col-sm-offset-1 col-sm-5">
+        <input type="text" class="form-control answer-to-input" value="{{costPerCanSixteen()}}" ng-model="cpcSixteen">
       </div>
     </div>
     <div class="form-group">
       <label for="pricePerCan" class="col-sm-6 control-label">Price Per Can</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <div class="form-control answer-to-input">{{ }}</div>
+        <input type="text" class="form-control answer-to-input" value="3.165" ng-model="ppcSixteen">
       </div>
     </div>
   </form>
@@ -36,25 +36,25 @@
     <div class="form-group">
       <label for="inputCases" class="col-sm-6 control-label">Amount of Cases</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <input type="number" min="0.01" step="0.01" max="2500" class="form-control" id="inputCases">
+        <input type="number" min="0.01" step="0.01" max="2500" class="form-control" ng-model="casesTwenty">
       </div>
     </div>
     <div class="form-group">
       <label for="inputCost" class="col-sm-6 control-label">Cost Per Case</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <input type="number" min="0.01" step="0.01" max="2500" class="form-control" id="inputCost" placeholder="35.70">
+        <input type="number" min="0.01" step="0.01" max="2500" class="form-control" ng-model="priceTwenty" placeholder="35.70">
       </div>
     </div>
     <div class="form-group">
       <label for="canCost" class="col-sm-6 control-label">Cost Per Can</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <div class="form-control answer-to-input">{{ }}</div>
+        <input type="text" class="form-control answer-to-input" value="{{costPerCanTwenty()}}" ng-model="cpcTwenty">
       </div>
     </div>
     <div class="form-group">
       <label for="pricePerCan" class="col-sm-6 control-label">Price Per Can</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <div class="form-control answer-to-input">{{ }}</div>
+        <input type="text" class="form-control answer-to-input" value="4.29" ng-model="ppcTwenty">
       </div>
     </div>
   </form>
@@ -67,31 +67,31 @@
     <div class="form-group">
       <label for="costToRetail" class="col-sm-6 control-label">Cost to Retail</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <div class="form-control answer-to-input">{{ }}</div>
-      </div>
+        <input type="text" class="form-control answer-to-input" value="{{ppcSixteen+ppcTwenty}}">
+      </div> 
     </div>
     <div class="form-group">
       <label for="sixteenProfit" class="col-sm-6 control-label">16oz. Profit <em>(per can)</em></label>
       <div class="col-sm-offset-1 col-sm-5">
-        <div class="form-control answer-to-input">{{ }}</div>
+        <input type="text" class="form-control answer-to-input" value="{{ppcSixteen-cpcSixteen}}" ng-model="profitSixteen">
       </div>
     </div>
     <div class="form-group">
       <label for="twentyProfit" class="col-sm-6 control-label">20ox. Profit (per can)</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <div class="form-control answer-to-input">{{ }}</div>
+        <input type="text" class="form-control answer-to-input" value="{{ppcTwenty-cpcTwenty}}" ng-model="profitTwenty">
       </div>
     </div>
     <div class="form-group">
       <label for="dispProfit" class="col-sm-6 control-label">Display Profit</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <div class="form-control answer-to-input">{{ }}</div>
+        <input type="text" class="form-control answer-to-input" value="{{ (casesSixteen*12)*profitSixteen + (casesTwenty*12)*profitTwenty }}" ng-model="profitDisplay">
       </div>
     </div>
     <div class="form-group">
       <label for="profitMargin" class="col-sm-6 control-label">Profit Margin</label>
       <div class="col-sm-offset-1 col-sm-5">
-        <div class="form-control answer-to-input">{{ }}</div>
+        <div class="form-control answer-to-input">{{ profitDisplay/revenue }}</div>
       </div>
     </div>
   </form>
