--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -8,7 +8,7 @@
 body{
 	font-family: "Arial, Helvetica", sans-serif;
 	background: url("/static/img/display.png") no-repeat;
-	background-size: 107% auto;
+	background-size: 100% auto;
 }
 
 /* Top Only */
@@ -19,56 +19,52 @@ nav{
 	margin: 20px;
 }
 nav img{
-	width: 247px;
+	width: 85px;
 }
 nav #title{
 	display: inline-block;
-	font-size: 41px;
+	font-size: 16px;
 	font-weight: bold;
-	width: 61%;
-	margin-left: 20px;
-	margin-top: 41px;
+	width: 64%;
+	margin-left: 10px;
+	margin-top: 7px;
 	text-align: left;
 	vertical-align: top;
-	color: white;
+	color: #eeeeee;
 }
 
 /* main */
 .container{
-	padding-left: 5px;
-	padding-right: 5px;
-	width: 800px;
+
 }
 .container h1{
-	font-size: 55px;
+	font-size: 25px;
 	font-weight: bolder;
 }
 .hr{
 	width: 100%;
-	height: 5px;
+	height: 3px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 9%;
+	margin-top: 2%;
 	margin-bottom: 4%;
 }
 form{
 	margin-top: 30px;
 	margin-bottom: 30px;
 }
-label.col-sm-6.control-label{
-	position: relative;
-    top: 10px;
+.form-group{
+	vertical-align: middle;
+}
+.form-group .control-label{
 	text-align: left;
 	padding-top: 0;
 	padding-right: 0;
-	font-size: 48px;
-}
-.form-group{
-	margin-bottom: 40px;
+	font-size: 14px;
 }
 .form-group input, .answer-to-input{
-	font-size: 57px;
-	height: 100px;
+	font-size: 30px;
+	height: 38px;
 	font-weight: bold;
 	text-align: center;
 	vertical-align: middle;
@@ -114,32 +110,56 @@ label.col-sm-6.control-label{
 }
 
 /* ------Responsive----- */
-/* iPhone 6 Plus & 7 Plus */
-@media screen and (max-width : 767px) and (max-device-width : 767px){
+/* desktop */
+@media screen and (min-width: 768px){
 	nav img{
-		width: 315px;
+		width: 220px;
 	}
 
 	nav #title{
-		font-size: 52px;
+		font-size: 40px;
 		width: 60%;
-		margin-top: 55px;
+		margin-top: 17px;
 	}
 }
 
-/* iPhone 6 & 6s */
-@media screen and (max-width : 413px) and (max-device-width: 413px){
+/* tablet */
+@media screen and (min-width: 600px){
 	nav img{
-		width: 300px;
+		width: 220px;
 	}
 
 	nav #title{
-		font-size: 52px;
+		font-size: 40px;
 		width: 60%;
-		margin-top: 50px;
+		margin-top: 17px;
 	}
 }
-@media screen and (max-width : 320px) and (max-device-width: 320px){
 
+/* iPhone 6 Plus & 6s Plus */
+@media screen and (min-width: 413px){
+	.container h1{
+		font-size: 20px;
+	}
+	nav img{
+		width: 110px;
+	}
+
+	nav #title{
+		font-size: 21px;
+		width: 61%;
+		margin-top: 6px;
+	}
 }
+/*@media screen and (min-device-width: 320px){
+	nav img{
+		width: 85px;
+	}
+
+	nav #title{
+	    font-size: 16px;
+	    width: 64%;
+	    margin-top: 7px;
+	}
+}*/
 /* END content-space & content-block */
