--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -19,11 +19,11 @@ nav{
 	margin: 20px;
 }
 nav img{
-	width: 85px;
+	width: 31%;
 }
 nav #title{
 	display: inline-block;
-	font-size: 16px;
+	font-size: 118%;
 	font-weight: bold;
 	width: 64%;
 	margin-left: 10px;
@@ -38,7 +38,7 @@ nav #title{
 
 }
 .container h1{
-	font-size: 25px;
+	font-size: 160%;
 	font-weight: bolder;
 }
 .hr{
@@ -50,21 +50,23 @@ nav #title{
 	margin-bottom: 4%;
 }
 form{
-	margin-top: 30px;
+	margin-top: 10px;
 	margin-bottom: 30px;
 }
 .form-group{
 	vertical-align: middle;
 }
 .form-group .control-label{
+	position: relative;
+	top: 9px;
 	text-align: left;
 	padding-top: 0;
 	padding-right: 0;
-	font-size: 14px;
+	font-size: 104%;
 }
 .form-group input, .answer-to-input{
-	font-size: 30px;
-	height: 38px;
+	font-size: 170%;
+	height: 1%;
 	font-weight: bold;
 	text-align: center;
 	vertical-align: middle;
@@ -110,56 +112,46 @@ form{
 }
 
 /* ------Responsive----- */
-/* desktop */
-@media screen and (min-width: 768px){
-	nav img{
-		width: 220px;
-	}
-
+/* iPhone 6 & 6s */
+@media only screen and (min-width: 375px){
 	nav #title{
-		font-size: 40px;
-		width: 60%;
-		margin-top: 17px;
+		font-size: 141%;
 	}
-}
-
-/* tablet */
-@media screen and (min-width: 600px){
-	nav img{
-		width: 220px;
-	}
-
-	nav #title{
-		font-size: 40px;
-		width: 60%;
-		margin-top: 17px;
+	.form-group .control-label{
+		font-size: 123%;
 	}
 }
 
 /* iPhone 6 Plus & 6s Plus */
-@media screen and (min-width: 413px){
-	.container h1{
-		font-size: 20px;
-	}
-	nav img{
-		width: 110px;
-	}
-
+@media only screen and (min-width: 414px){
 	nav #title{
-		font-size: 21px;
-		width: 61%;
-		margin-top: 6px;
+		font-size: 158%;
+	}
+	.form-group .control-label {
+	    font-size: 137%;
 	}
 }
-/*@media screen and (min-device-width: 320px){
-	nav img{
-		width: 85px;
-	}
 
-	nav #title{
-	    font-size: 16px;
-	    width: 64%;
-	    margin-top: 7px;
+/* tablet */
+@media only screen and (min-width: 768px){
+	nav #title {
+	    font-size: 300%;
+	    margin-top: 2%;
 	}
-}*/
+	.container h1{
+		font-size: 51px;
+	}
+	.form-group .control-label {
+		position: relative;
+		top: 20px;
+	    font-size: 33px;
+	}
+	.form-group input, .answer-to-input{
+		font-size: 50px;
+		height: 85px;
+		font-weight: bold;
+		text-align: center;
+		vertical-align: middle;
+	}
+}
 /* END content-space & content-block */
